[NARFEX-3] Setted favicon and logo NRFX, Fix main screen bug on safari

--- a/src/token_landing/containers/NarfexToken/NarfexToken.less
+++ b/src/token_landing/containers/NarfexToken/NarfexToken.less
@@ -128,7 +128,7 @@
             background: linear-gradient(
                     0deg,
                     var(--alice-blue) 70%,
-                    transparent 100%
+                    rgba(255,255,255, 0) 100%
             );
 
             a {
