--- a/src/wrappers/Landing/components/TokenHeader/TokenHeader.less
+++ b/src/wrappers/Landing/components/TokenHeader/TokenHeader.less
@@ -1,6 +1,6 @@
 @import '../../../../vars';
 
-.Header {
+.TokenHeader {
   display: flex;
   max-width: 1160px;
   margin: 0 auto;
@@ -28,7 +28,7 @@
     }
   }
 
-  .Header__logo {
+  .TokenHeader__logo {
     margin-right: 40px;
     cursor: pointer;
 
@@ -38,7 +38,7 @@
     }
   }
 
-  .Header__nav {
+  .TokenHeader__nav {
     list-style: none;
     display: flex;
     margin: 0;
@@ -75,12 +75,12 @@
       }
 
       &:hover {
-        color: var(--text-black);
+        opacity: .9;
       }
     }
   }
 
-  .Header__menuButton {
+  .TokenHeader__menuButton {
     width: 45px;
     height: 45px;
     padding: 0;
@@ -133,7 +133,7 @@
     }
   }
 
-  .Header__authButtons {
+  .TokenHeader__authButtons {
     margin-left: auto;
     margin-top: auto;
     margin-bottom: auto;
